# poc-agent-ai

./: .gitignore  package-lock.json  pyproject.toml
poc_agent_ai/: crew.py  main.py
poc_agent_ai/config/: agents.yaml  tasks.yaml
